# gen-server

./: .dockerignore  .env.all.example  .env.docker.example  .env.example  .env.local.example  .env.runpod.example  .gitignore  .goreleaser.yml  Caddyfile  Dockerfile  Dockerfile.old  Dockerfile.runpod  README.md  config.example.json  config.example.yaml  config.json  folders.py  generate_iteration.json  go.mod  go.sum  headers.md  load_save_flow.json  main.go  main.py  node_definitions.json  openapi.yaml  paths.py  pyproject.toml  requirements.txt  seed_models.py  seed_models_postgres.py  server.py  setup.py  sqlc.yaml  test.py  test2.py  test3.py  test4.py  test_client.py  test_endpoints.py  (+4 more)
ComfyCreator.egg-info/: PKG-INFO  SOURCES.txt
archive/: prev_custom_node.py  (+1 more)
python_packages/core_extension_2/: pyproject.toml
python_packages/core_extension_2/src/core_extension_2/: __init__.py
python_packages/cozy_runtime/: MANIFEST.in  pyproject.toml
python_packages/cozy_runtime/src/cozy_runtime/: config.py  globals.py  handlers.py  main.py  model_command_handler.py  parse_cli.py  tcp_server.py
python_packages/cozy_runtime/src/cozy_runtime/base_types/: __init__.py  authenticator.py  config.py  pydantic_models.py
python_packages/cozy_runtime/src/cozy_runtime/inference/architectures/aura_flow_archs/: text_encoder.py  transformer.py
python_packages/cozy_runtime/src/cozy_runtime/inference/architectures/birefnet_arch/birefnet/: __init__.py
python_packages/cozy_runtime/src/cozy_runtime/inference/architectures/birefnet_arch/birefnet/model/modules/: aspp.py
python_packages/cozy_runtime/src/cozy_runtime/inference/architectures/birefnet_arch/birefnet/model/refinement/: stem_layer.py
python_packages/cozy_runtime/src/cozy_runtime/inference/architectures/briarmbg_arch/briarmbg/: __init__.py
python_packages/cozy_runtime/src/cozy_runtime/inference/architectures/isnet_arch/: __init__.py
python_packages/cozy_runtime/src/cozy_runtime/inference/architectures/ormbg_arch/: __init__.py
python_packages/cozy_runtime/src/cozy_runtime/inference/architectures/ormbg_arch/ormbg/: __init__.py  ormbg.py
python_packages/cozy_runtime/src/cozy_runtime/inference/architectures/sd1_archs/: config_vae.json
python_packages/cozy_runtime/src/cozy_runtime/inference/architectures/sd3_archs/: __init__.py  text_encoder_1.py  text_encoder_3.py
python_packages/cozy_runtime/src/cozy_runtime/inference/architectures/sdxl_archs/: text_encoder_1.py
python_packages/cozy_runtime/src/cozy_runtime/inference/architectures/spandrel/: __init__.py
python_packages/cozy_runtime/src/cozy_runtime/inference/custom_nodes/: __init__.py  caption_node.py  data_prep_node.py  depth_map_node.py  fluxlora_config_node.py  fluxlora_train_node.py  image_gen_node.py
python_packages/cozy_runtime/src/cozy_runtime/utils/: cli_helpers.py  extension_loader.py  hf_model_manager.py  image.py  load_models.py  model_config.json  model_config_manager.py  model_downloader.py  model_memory_manager.py  paths.py  prompt_enhancer.py  quantize_models.py  utils.py
python_packages/cozy_runtime/src/cozy_runtime/worker/: gpu_worker.py
python_packages/cozy_runtime/src/inference/architectures/aura_flow_archs/: vae.py
python_packages/cozy_runtime/src/inference/architectures/birefnet_arch/: __init__.py
python_packages/cozy_runtime/src/inference/architectures/birefnet_arch/birefnet/model/backbones/: build_backbone.py
python_packages/cozy_runtime/src/inference/architectures/birefnet_arch/birefnet/model/modules/: ing.py
python_packages/cozy_runtime/src/inference/architectures/birefnet_arch/birefnet/model/refinement/: refiner.py
python_packages/cozy_runtime/src/inference/architectures/briarmbg_arch/: __init__.py
python_packages/cozy_runtime/src/inference/architectures/flux_archs/: vae.py
python_packages/cozy_runtime/src/inference/architectures/isnet_arch/isnet/: __init__.py  isnet.py
python_packages/cozy_runtime/src/inference/architectures/sd1_archs/: config_text_encoder.json  text_encoder.py  vae.py
python_packages/cozy_runtime/src/inference/architectures/text_encoder_2_arch/: __init__.py
python_packages/cozy_runtime/src/inference/architectures/vae_arch/: __init__.py
python_packages/cozy_runtime/src/inference/custom_nodes/: cogxvideo_node.py  fluxsave_node.py  image_regen_node.py  image_to_image_node.py  removebg_node.py
python_packages/gen_server/: build_hook.py  hatch_build.py  pyproject.toml
python_packages/gen_server/src/gen_server/: config.py  globals.py  handlers.py  main.py  main_old.py  model_command_handler.py  tcp_server.py
python_packages/gen_server/src/gen_server/api/: __init__.py  api_routes.py
python_packages/gen_server/src/gen_server/base_types/: __init__.py  architecture.py  checkpoint.py  common.py  config.py  custom_node.py  pydantic_models.py
python_packages/gen_server/src/gen_server/examples/: .env.docker.example  .env.local.example
python_packages/gen_server/src/gen_server/examples/~/.cozy-creator/: .env.local.example
python_packages/gen_server/src/gen_server/executor/: gpu_worker_non_io.py  toon_crafter_workflow.py  workflows.py
python_packages/gen_server/src/gen_server/proto_defs/: custom_struct_v1_pb2.pyi  grpc_service_v1_pb2.py  grpc_service_v1_pb2_grpc.py  health_v1_pb2_grpc.py
python_packages/gen_server/src/gen_server/react_components/: new.js
python_packages/gen_server/src/gen_server/tests/: test_aiohttp.py
python_packages/gen_server/src/gen_server/utils/: __init__.py  device.py  download_manager.py  extension_loader.py  hf_model_manager.py  image.py  load_models.py  model_config.json  model_config_manager.py  model_downloader.py  model_memory_manager.py  paths.py  quantize_models.py  to_dict.py  utils.py  web.py
python_packages/gen_server/src/gen_server/worker/: gpu_worker.py
python_packages/gen_server/src/gen_server/workflow/: state.py
python_packages/gen_server/src/gen_server/workflow/nodes/: base.py
python_packages/image_utils/: pyproject.toml
python_packages/image_utils/src/image_utils/custom_nodes/: __init__.py  composite_image.py  helper_decorators.py
web/: go.mod  (+5 more)
(+396 files in other folders)
