[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["gen_server", "extensions", "model_registry", "protobuf"]
namespaces = false

[project]
name = "comfy-creator"
description = "Generative-AI server for content production"
version = "0.0.1"
authors = [
    { name = "Paul Fidika", email = "paul@fidika.com" }
]
dependencies = [
    "protobuf~=5.26.1",
    "aiohttp~=3.9.5",
    "pydantic-settings~=2.2.1",
    "grpcio",
    "boto3~=1.34.99",
    "uuid~=1.30",
    "blake3~=0.4.1",
    "requests"
]

[project.scripts]
comfy-creator = "gen_server.main:main"

[project.entry-points."comfy_creator.api"]
endpoint1 = "extensions.core2.api.endpoint1:Endpoint1"
endpoint2 = "extensions.core2.api.endpoint2:Endpoint2"

[project.entry-points."comfy_creator.architectures"]
architecture1 = "extensions.core2.arch1:Architecture1"
architecture2 = "extensions.core2.arch2:Architecture2"

[project.entry-points."comfy_creator.custom_nodes"]
node1 = "extensions.core2.custom_nodes.node1:get_nodes"
node2 = "extensions.core2.custom_nodes.node2:Node1"

[project.entry-points."comfy_creator.widgets"]
widget1 = "extensions.core2.widgets:Widget1"
widget2 = "extensions.core2.widgets:Widget2"
