[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["comfy-creator"]
include = ["*"]

[project]
name = "comfy-creator"
description = "Generative-AI server for content production"
version = "0.0.1"
authors = [
    { name = "Paul Fidika", email = "paul@fidika.com" }
]
dependencies = [
    "aiohttp>=3.9.5",
    "blake3>=0.4.1",
    "boto3>=1.34.99",
    "firebase-admin>=6.5.0",
    "grpcio",
    "protobuf",
    "pulsar-client>=3.5.0",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    "requests",
    "uuid~=1.30"
]

[project.scripts]
comfy-creator = "gen_server.main:main"

[project.entry-points."comfy_creator.api"]
endpoint1 = "extensions.core2.api.endpoint1:Endpoint1"
endpoint2 = "extensions.core2.api.endpoint2:Endpoint2"

[project.entry-points."comfy_creator.architectures"]
architecture1 = "extensions.core2.arch1:Architecture1"
architecture2 = "extensions.core2.arch2:Architecture2"
architecture3 = "extensions.core2.text_encoder:SD15TextEncoderArch"
architecture4 = "extensions.core2.unet:SD15UNetArch"
architecture5 = "extensions.core2.VAE:SD15VAEArch"

[project.entry-points."comfy_creator.custom_nodes"]
node1 = "extensions.core2.custom_nodes.node1:get_nodes"
node2 = "extensions.core2.custom_nodes.node1:Node1"

[project.entry-points."comfy_creator.widgets"]
widget1 = "extensions.core2.widgets:Widget1"
widget2 = "extensions.core2.widgets:Widget2"
