[build-system]
requires = ["hatchling", "requests"]
build-backend = "hatchling.build"

[project]
name = "cozy_runtime"
description = "Python runtime for AI content generation."
version = "0.3.1"
authors = [
    { name = "Paul Fidika", email = "paul@fidika.com" },
    { name = "Oghenetega Biokoro", email = "teggyg123@gmail.com" },
]

dependencies = [
    "timm==0.6.7",
    "aioboto3",
    "aiofiles",
    "aiohttp",
    "aiohttp_cors",
    "aioshutil",
    "aiohttp_middlewares",
    "backoff",
    "blake3",
    "diffusers@git+https://github.com/huggingface/diffusers.git",
    "einops",
    "grpcio",
    "gunicorn",
    "kornia",
    "opencv-python",
    "peft",
    "protobuf",
    "pydantic>=2.0",
    "python-dotenv",
    "PyYAML",
    "safetensors>=0.4.2",
    "scikit-image",
    "sentencepiece",
    "spandrel",
    "transformers>=4.25",
    "tqdm",
    "typing_extensions",
    "uuid",
]

[project.optional-dependencies]
performance = ["accelerate", "triton", "xformers"]

[project.scripts]
cozy-runtime = "cozy_runtime.main:main"
cozy_runtime = "cozy_runtime.main:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cozy_runtime"]

[tool.hatch.build.targets.sdist]
packages = ["src/cozy_runtime"]
