[build-system]
requires = ["hatchling", "requests"]
build-backend = "hatchling.build"

[project]
name = "gen_server"
description = "Generative-AI server for content production"
version = "0.2.2"
authors = [
    { name = "Paul Fidika", email = "paul@fidika.com" },
    { name = "Oghenetega Biokoro", email = "teggyg123@gmail.com" },
]

dependencies = [
    "aioboto3",
    "aiofiles",
    "aiohttp",
    "aiohttp_cors",
    "aioshutil",
    "aiohttp_middlewares",
    "blake3",
    "einops",
    "grpcio",
    "gunicorn",
    "kornia",
    "opencv-python",
    "peft",
    "protobuf",
    "pydantic>=2.0",
    "pydantic_settings>=2.3",
    "python-dotenv",
    "PyYAML",
    "safetensors>=0.4.2",
    "scikit-image",
    "sentencepiece",
    "spandrel",
    "timm",
    "transformers>=4.25",
    "tqdm",
    "typing_extensions",
    "uuid",
    # "diffusers@git+https://github.com/huggingface/diffusers.git"
]

[project.optional-dependencies]
performance = ["accelerate", "triton", "xformers"]

# [tool.setuptools.packages.find]
# where = ["src"]
# include = ["gen_server*"]
# exclude = ["tests", "tests.*"]
# namespaces = false

# [tool.setuptools.package-data]
# "gen_server" = ["py.typed"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel.hooks.custom]
