[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "image_utils"
description = "Image Utilities"
version = "0.1.0"
authors = [{ name = "Oghenetega Biokoro", email = "teggyg123@gmail.com" }]

dependencies = [
  "blake3",
  "boto3",
  "cozy_runtime",
  "numpy",
  "Pillow",
  "python-dotenv",
  "torch",
  "torchvision",
]
